@@ -5,6 +5,8 @@ inputs:
 - name: terraform-source-dir
 - name: state-input-dir
   optional: true
+- name: consul-certificates
+  optional: true
 outputs:
 - name: plan-output-archive
 params:
